# RisingServer

./: .gitignore  1477296287Rs_POS_UEM.doc  CMakeLists.txt  README.md  tags
Devices/: CMakeLists.txt  IDevice.cpp  IDevice.h
Devices/MMKO1/: CMakeLists.txt  MmkoModule.cpp  MmkoModule.h  ModuleFactory.cpp  ModuleFactory.h  test.cpp
Devices/MezzanineMMKO1/: CMakeLists.txt
Libraries/: CMakeLists.txt
Libraries/mmko1-lib/: CMakeLists.txt  main.cpp
Libraries/mmko1-lib/include/: AbonentMode.h  ControllerMode.h  MMKOErrors.h  MainBus.h  Mmko.h  MonitorMode.h  enums.h
Libraries/mmko1-lib/src/: AbonentMode.cpp  ControllerMode.cpp  MMKOErrors.cpp  MainBus.cpp  Mmko.cpp  MonitorMode.cpp
Libraries/mmko1-lib/support/: Actions.cpp  SFileLogger.cpp  SFileLogger.h
Libraries/vxipnp/linux/driver/: un_cross.c  un_cross.h  unmbase.doc
Libraries/vxipnp/linux/etc/: vxipnp.conf
Libraries/vxipnp/linux/etc/desktop/: QtVisaConfig.desktop
Libraries/vxipnp/linux/include/: unmbase.h  unmmko1.h  visatype.h
Libraries/vxipnp/linux/unmmko1/: un_queue.c  un_threads.h  un_threads_errors.h  unmmko1.docx  unmmko1.h  unmmko1_bc_impl.c  unmmko1_device_data.c  unmmko1_device_data.h  unmmko1_internal.h  unmmko1_mon_utilities.c  unmmko1_mon_utilities.h  unmmko1_request.h
Libraries/vxipnp/linux/unmmko1/examples/: bc_monitor_messages.c  bc_run_schedule.c  bc_send_messages.c  common.h  mko1_run_tests.c  mon_filter_messages.c  mon_monitor_messages.c  rt_create_queue_responses.c  rt_create_wrap_responses.c  rt_monitor_messages.c
Server/: CMakeLists.txt  server_rpc.cpp  server_rpc.h  server_socket_rpc.cpp  server_socket_rpc.h
Server/Gui/: DialogSettings.cpp  DialogSettings.h  MServerWindow.cpp  MServerWindow.h
Server/Include/: MKOServer.h  MezoninServer.h  ServerPlugin.h  ServerRpc.h  ServerSocketRpc.h  ServerVisualPlugin.h
Server/Operators/: ControlOperators14N.cpp  TestOperators.cpp
Server/Source/: MKOServer.cpp  MezoninServer.cpp  ServerPlugin.cpp  ServerRpc.cpp  ServerSocketRpc.cpp  ServerVisualPlugin.cpp  main.cpp
Server/enums/: enums.h
Server/log/: SLogFile.cpp  SLogFile.h
Server/qrc/: directives.xml  mezonin_server.qrc.depends
Server/xml/: mezonin_server_directives.xml
Test/: CMakeLists.txt  test_lib_mko.cpp
mmko1-lib/: CMakeLists.txt
mmko1-lib/core/: .vimspector.json  CMakeLists.txt  compile_commands.json  main.cpp  tags
mmko1-lib/core/.cache/clangd/index/: Actions.cpp.9D23E5CDE030DF17.idx  Actions.h.305B669D1C49CABE.idx  ControllerMode.cpp.5E5CC9B13FA95F68.idx  ControllerMode.h.6DA58C0A5D3AE38A.idx  ITestMmko.h.A27247571DCF63CB.idx  MonitorMode.cpp.F31B810E4B5E4454.idx  MonitorMode.h.8B115F9A31D69F3B.idx  Object.cpp.E24EDFD1F4C91EE6.idx  Object.h.8ECA91311838E295.idx  SCurDateTime.cpp.966CBF030D5EFDCB.idx  SCurDateTime.h.9260FA356A12F818.idx  SFileLogger.cpp.BFC63FADE733F626.idx  SFileLogger.h.A68DC8DD3443FDC4.idx  TestMmko.cpp.646A8C515DFAEE51.idx  TestMmko.h.9568A33E6FC3AA08.idx  defines.h.2BEF10CA74C47AA3.idx  main.cpp.88F8B1461BB46BD8.idx
mmko1-lib/core/build-tags/: CMakeCache.txt  Makefile  cmake_install.cmake
mmko1-lib/core/defines/: defines.h
mmko1-lib/core/enums/: BaseMkoEnums.h  GeneralEnums.h  defines.h
mmko1-lib/core/include/: AbonentMode.h  AikUnmmko.h  ControllerMode.h  ITestMmko.h  MMKOErrors.h  MMKOInterface.h  MkoErrors.h  Mmko.h  MonitorMode.h  Object.h  TestMmko.h  UpdateCommon.h  aik_unmmko.h  common.h
mmko1-lib/core/logs/: common_log.txt
mmko1-lib/core/src/: AbonentMode.cpp  AikUnmmko.cpp  ControllerMode.cpp  MMKOErrors.cpp  MMKOInterface.cpp  MkoErrors.cpp  Mmko.cpp  MonitorMode.cpp  TestMmko.cpp  UpdateCommon.cpp  aik_unmmko.cpp
mmko1-lib/core/support/: Actions.cpp  Actions.h  SCurDateTime.cpp  SCurDateTime.h
vxipnp/linux/driver/: unmbase.c
vxipnp/linux/etc/config/: resmantcp.out  visa.conf
vxipnp/linux/include/: unspy.h
vxipnp/linux/unmmko1/: un_queue.h  un_threads.c  un_threads_types.h  unmmko1_constants.h  unmmko1_device_requests.c  unmmko1_device_requests.h  unmmko1_error_messages.c  unmmko1_error_messages.h  unmmko1_module.c  unmmko1_mon_impl.c  unmmko1_request.c  unmmko1_rt_impl.c  unmmko1_utilities.c  unmmko1_utilities.h
vxipnp/linux/unmmko1/examples/: bc_run_cyclic_schedule.c  rt_create_custom_responses.c  rt_create_default_responses.c
